...
                        Spacer(modifier = Modifier.height(16.dp))

                        Row(
                            horizontalArrangement = Arrangement.SpaceEvenly,
                            modifier = Modifier.fillMaxWidth()
                        ) {
                            Button(onClick = {permissionLauncher.launch(Manifest.permission.CAMERA)}, modifier = Modifier.testTag("ButtonCamera")) {
                                Text("Camera")
                            }
                            Button(onClick = { galleryLauncher.launch("image/*") }) {
                                Text("Gallery")
                            }
                        }

                        Spacer(modifier = Modifier.height(16.dp))

                        OutlinedTextField(
                            value = title,
                            onValueChange = { title = it },
                            label = { Text("Enter title") },
                            modifier = Modifier.fillMaxWidth()
                        )

                        Spacer(modifier = Modifier.height(16.dp))

                        OutlinedTextField(
                            value = description,
                            onValueChange = { description = it },
                            label = { Text("Enter description") },
                            modifier = Modifier
                                .fillMaxWidth()
                                .height(100.dp)
                        )

                        Spacer(modifier = Modifier.height(16.dp))
...
                            if (isUploading) {
                                CircularProgressIndicator(
                                    color = Color.White,
                                    modifier = Modifier.size(24.dp)
                                )
                            } else {
                                Text("Upload Story")
                            }
                        }
                    }
                }
            }
        }
...
                Button(
                    onClick = {
                        takePicture(context, imageCapture) { uri ->
                            onImageCaptured(uri)
                        }
                    },
                    modifier = Modifier.testTag("ButtonTakePicture")
                ) {
                    Text("Take Picture")
                }
            }
            onClose?.let {
                Button(onClick = it) {
...
