...
        plant.name.contains(searchText, ignoreCase = true)
    }

    Scaffold(
        topBar = {
            TopAppBar(
                modifier = Modifier.testTag("HomeScreenTopappbar"),
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = colorResource(id = R.color.yellow_pattern),
                    titleContentColor = colorResource(id = R.color.white_base),
                ),
                title = {
                    Text(text = stringResource(id = R.string.app_name), fontFamily = FontFamily(Font(R.font.bold)), color = colorResource(id = R.color.white_base))
                },
                actions = {
                    IconButton(onClick = {nav.navigate("liststory")}, modifier = Modifier.testTag("StoryButton")) {
                        Icon(Icons.Filled.Add, contentDescription = null, tint = colorResource(id = R.color.white_base))
                    }
                    IconButton(onClick = { nav.navigate("maps")}, modifier = Modifier.testTag("MapsButton")) {
                        Icon(Icons.Filled.Map, contentDescription = null, tint = colorResource(id = R.color.white_base))
                    }
                    IconButton(onClick = { authViewModel.logout(logoutCallback = { nav.navigate("onboarding")})}, modifier = Modifier.testTag("LogoutButton")) {
                        Icon(Icons.AutoMirrored.Filled.ExitToApp, contentDescription = null, tint = colorResource(id = R.color.white_base))
                    }
                }
...
                        leadingIcon = {
                            Icon(painterResource(id = R.drawable.plant), contentDescription = null)
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(horizontal = 10.dp)
                            .testTag("SearchBar")
                    )
                    LazyRow(
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(vertical = 16.dp, horizontal = 5.dp)
                    ) {
...
