...
    <string name="subtitle_ob2">Ketahui kondisi tanah sekitar \ndengan model AI satelit \nsentinel-2A</string>
    <string name="subtitle_ob3">Semua fitur tersebut tersedia \ndalam satu aplikasi</string>
    <string name="btn_google">Masuk dengan Google</string>
    <string name="reg_btn">Mendaftar</string>
    <string name="log_btn">Masuk</string>
    <string name="login_fragment_title">Masuk Akun</string>
    <string name="email_form">Surel</string>
    <string name="password_form">Kata sandi</string>
    <string name="forgot_pw">Lupa kata sandi</string>
    <string name="snk">Saya menyetujui syarat dan ketentuan yang berlaku.</string>
    <string name="dont_have_an_account">Belum memiliki akun?</string>
    <string name="tv_register">Daftar sekarang</string>
    <string name="have_an_account">Sudah memiliki akun?</string>
    <string name="tv_login">Masuk sekarang</string>
    <string name="username_form">Nama pengguna</string>
    <string name="confirm_password_form">Konfirmasi kata sandi</string>
    <string name="register_fragment_title">Daftar Akun</string>
    <string name="maps_btn">Maps</string>
    <string name="logout_btn">Keluar</string>
    <string name="welcome_username">Selamat datang, %s</string>
    <string name="item_title">Rekomendasi Media Tanam</string>
    <string name="item_title_fertilizer">Rekomendasi Pupuk</string>
    <string name="ph">pH</string>
    <string name="natrium">Nitrogen</string>
...
