...
                title = {
                    Text(text = "Berbagi Cerita Pertanian", fontFamily = FontFamily(Font(R.font.bold)), color = colorResource(id = R.color.white_base))
                },
            )
        },
        floatingActionButton = {
            FloatingActionButton(onClick = onAddStory, containerColor = colorResource(id = R.color.yellow_pattern), modifier = Modifier.testTag("AddStoryFAB")) {
                Icon(Icons.Default.Add, contentDescription = "Add Story", tint = colorResource(id = R.color.white_base))
            }
        }
    ) { paddingValues ->
        Image(
            painter = painterResource(id = R.drawable.ob_bg),
...
            modifier = Modifier.fillMaxSize()
        )
        Box(modifier = Modifier.padding(paddingValues)) {
            if (isLoading) {
                CircularProgressIndicator(modifier = Modifier.align(Alignment.Center))
            } else {
                LazyColumn(modifier = Modifier.testTag("ListStory")) {
                    items(stories) { story ->
                        StoryItem(story, onStoryClick)
                    }
                }
            }
        }
...
